@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,12 +24,11 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestSharedAccess
  */
 
-import jdk.incubator.foreign.*;
-import org.testng.annotations.*;
-
+import java.lang.foreign.*;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
@@ -38,6 +37,7 @@ import java.util.Spliterator;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicInteger;
+import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
 
@@ -48,9 +48,9 @@ public class TestSharedAccess {
     @Test
     public void testShared() throws Throwable {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment s = MemorySegment.allocateNative(layout, scope);
-            for (int i = 0 ; i < layout.elementCount().getAsLong() ; i++) {
+        try (MemorySession session = MemorySession.openShared()) {
+            MemorySegment s = MemorySegment.allocateNative(layout, session);
+            for (int i = 0 ; i < layout.elementCount() ; i++) {
                 setInt(s.asSlice(i * 4), 42);
             }
             List<Thread> threads = new ArrayList<>();
@@ -93,12 +93,12 @@ public class TestSharedAccess {
 
     @Test
     public void testSharedUnsafe() throws Throwable {
-        try (ResourceScope scope = ResourceScope.newSharedScope()) {
-            MemorySegment s = MemorySegment.allocateNative(4, 1, scope);
+        try (MemorySession session = MemorySession.openShared()) {
+            MemorySegment s = MemorySegment.allocateNative(4, 1, session);
             setInt(s, 42);
             assertEquals(getInt(s), 42);
             List<Thread> threads = new ArrayList<>();
-            MemorySegment sharedSegment = MemorySegment.ofAddress(s.address(), s.byteSize(), scope);
+            MemorySegment sharedSegment = MemorySegment.ofAddress(s.address(), s.byteSize(), session);
             for (int i = 0 ; i < 1000 ; i++) {
                 threads.add(new Thread(() -> {
                     assertEquals(getInt(sharedSegment), 42);
@@ -120,8 +120,8 @@ public class TestSharedAccess {
         CountDownLatch a = new CountDownLatch(1);
         CountDownLatch b = new CountDownLatch(1);
         CompletableFuture<?> r;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment s1 = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT), scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment s1 = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT), session);
             r = CompletableFuture.runAsync(() -> {
                 try {
                     ByteBuffer bb = s1.asByteBuffer();
